--- a/pytest_factory/template.py.jinja
+++ b/pytest_factory/template.py.jinja
@@ -5,7 +5,7 @@ from {{recording.last.IMPORT_PATH}} import {{recording.last.__name__}}
 {% for factory_path, factory_name in recording.get_factories(): %}
 from {{factory_path}} import {{factory_name}}
 {% endfor %}
-from {{recording.first.FACTORY_PATH}} import {{recording.first.FACTORY_NAME}}
+from {{request_factory_path}} import {{request_factory_name}}
 
 from {{handler_path}} import {{handler_name}}
 
